# Rie-AI

./: .gitignore  LICENSE  README.md  update-backend.ps1
client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs
client/src/components/: ChatHeader.jsx  ChatInputArea.jsx  ChatMessages.jsx  ConfirmationModal.jsx  FloatingBubble.jsx  FloatingChatWindow.jsx  FloatingScheduleSheet.jsx  HITLApproval.jsx  HistorySheet.jsx  HistorySidebar.jsx  LoadingScreen.jsx  MarkdownMessage.jsx  ModeToggle.jsx  NormalModeLayout.jsx  PeerQueryHistoryPanel.jsx  PlannerWindowPage.jsx  ScheduleNotificationBanner.jsx  ScheduleNotificationsBell.jsx  ScheduledTasksPanel.jsx  SettingsPage.jsx  Terminal.jsx  ToolChip.jsx  UpdateNotification.jsx  WelcomeScreen.jsx
client/src/constants/: appConfig.js
client/src/hooks/: useAttachments.js  useTypewriter.js  useWindowManager.js
client/src/services/: chatApi.js  historyService.js  memoryService.js  realtimeClient.js  updater.js
client/src/utils/: threadDisplay.js
server/: main.py  pyproject.toml  rie-backend.spec
server/app/: __init__.py  agent.py  chroma_store.py  config.py  custom_tools.py  database.py  embedding_download.py  ltm_tools.py  mcp_client.py  mcp_registry_tools.py  memory.py  models.py  peer_access.py  powershell_capture.py  realtime.py  remote_friend_tools.py  routes.py  runtime_context.py  scheduler.py  scheduler_tools.py  security.py  terminal_stream.py  tools.py  windows_tools.py
server/app/connectivity/: __init__.py  base.py  cloudflare.py  cloudflare_installer.py  cloudflare_setup.py  constants.py  manager.py  ngrok.py  ngrok_autostart.py  ngrok_installer.py  ngrok_setup.py
server/app/integrations/windows_mcp/: watch_cursor.py
server/app/integrations/windows_mcp/desktop/: config.py  service.py  views.py
server/app/integrations/windows_mcp/tree/: config.py  service.py  views.py
